--- a/CSS/Landing_Page.css
+++ b/CSS/Landing_Page.css
@@ -1,47 +1,205 @@
 
 /* Estilos globais */
 body {
-    font-family: Arial, sans-serif;
-    
-    padding: 0%;
-}
-
-#tab {
-    height: 125vh;
-    background-image: url('../Images/FamilyCooking1.jpg');
-    background-size: cover; /* Usando "cover" para ajustar a imagem automaticamente */
-    background-repeat: no-repeat;
-    background-position: center 30%; /* Combinando a posição horizontal e vertical */
-    background-attachment: fixed;
-    position: relative;
-    background-color: #273036;
-    color: #fff;
-    padding-bottom: 50px;
+  font-family: Arial, sans-serif;
 }
 
 
 
-.row_logo{
-
+.tab-bar {
+  width: 100%;
+  height: 10vh;
+  margin: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #303030;
+  z-index: 100;
+  transform: translateY(-100%);
+  transition: transform 0.5s ease-in-out;
+  display: flex;
+  justify-content: space-between;
 }
 
-.headline_row{
-    height: 200px;
+.tab-bar img {
+  position: absolute;
+  max-height: 100%;
+  width: auto;
+  left: 5%;
 }
 
-.logo {
- height: auto;
- width: 20vw;
+.nav-tabs {
+  text-decoration: none;
+  position: absolute;
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  left: 15%;
+  align-items: center !important;
+  border-bottom: none !important; /* Adiciona esta linha para remover a linha por baixo */
 }
 
-/* Estilos da seção de destaque (hero) 
-.hero {
-    text-align: center;
-    padding: 25%;
+.nav-tabs li {
+  display: flex;
+  align-items: center;
 }
-*/
 
-.headline {
+.nav-tabs a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 2.5vh 2vw; /* Ajuste o valor conforme necessário */
+  padding: 2vh;
+  max-height: 6vh;
+}
+
+
+.search-bar {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  top: 50%;
+  right: 5%;
+  transform: translateY(-50%);
+}
+
+.search-bar input {
+  flex-grow: 1;
+  padding: 1%;
+  margin-right: 1%;
+  max-height: 8vh;
+}
+
+.search-bar button {
+  padding: 1%;
+  background-color: #fff;
+  color: #303030;
+  border: none;
+  cursor: pointer;
+  max-height: 8vh;
+}
+
+.tab-bar:not(.hidden) {
+  transform: translateY(0);
+}
+
+
+.tab-bar:not(.hidden) {
+  transform: translateY(0);
+}
+
+/* Código anterior permanece o mesmo */
+
+@media screen and (max-width: 900px) {
+  .tab-bar img {
+    position: absolute;
+    max-height: 100%;
+    width: auto;
+    left: 5%;
+  }
+
+  /* Adiciona estilos específicos para telas pequenas (pode ajustar a largura conforme necessário) */
+  .nav-tabs {
+    display: none; /* Esconde a lista de navegação no modo de tela pequena */
+    position: absolute;
+    top: 10vh; /* Ajuste conforme necessário para evitar sobreposição com a barra */
+    left: 0;
+    background-color: #303030;
+    width: 100%;
+  }
+
+  .nav-tabs.active {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto; /* Redefine a altura para ajustar automaticamente ao conteúdo */
+  }
+
+  .nav-tabs.active {
+    display: flex; /* Exibe a lista de navegação quando o menu de hambúrguer está ativo */
+    flex-direction: column;
+    align-items: center; /* Centraliza verticalmente os itens */
+  }
+
+  .nav-tabs li {
+    margin: 10px 0;
+    text-align: center; /* Centraliza horizontalmente os itens */
+  }
+
+  .hamburger-menu {
+    display: block;
+    position: absolute;
+    top: 50%; /* Centraliza verticalmente */
+    right: 10px;
+    cursor: pointer;
+    z-index: 2; /* Garante que o ícone do hambúrguer fique acima da search-bar */
+    transform: translateY(-50%); /* Centraliza verticalmente */
+  }
+
+  /* Estiliza o ícone do hambúrguer, você pode substituir por uma imagem ou ícone personalizado se desejar */
+  .hamburger-menu::before {
+    content: '\2630'; /* Código Unicode para o ícone de hambúrguer (pode variar) */
+    font-size: 200%;
+    color: white;
+  }
+
+  .search-bar {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 50%;
+    right: 15vw; /* Ajuste conforme necessário para posicionar mais à direita */
+    transform: translateY(-50%);
+  }
+
+  .search-bar input {
+    flex-grow: 1;
+    padding: 1%;
+    margin-right: 1%;
+    max-height: 8vh;
+    max-width: 100px;
+  }
+
+  .search-bar button {
+    padding: 1%;
+    background-color: #fff;
+    color: #303030;
+    border: none;
+    cursor: pointer;
+    max-height: 8vh;
+  }
+}
+
+.principal {
+  /* Define a largura máxima para a div */
+  max-width: 100%;
+  /* Define a altura da div. Pode ser ajustado conforme necessário. */
+  height: 100vh;
+  /* Define a imagem como plano de fundo e ajusta o tamanho e posicionamento */
+  background: url('../Images/MesaDeComida2.jpg') no-repeat center center fixed;
+  background-size: cover;
+  
+}
+
+
+
+.hero-image{
+  max-height: 15rem;
+  width: auto;
+}
+
+.logo2{
+  position: absolute;
+  max-height: 15rem;
+  width: auto;
+}
+
+
+
+  
+/*.headline {
     
     background-image: linear-gradient(
         to right,
@@ -58,21 +216,8 @@ body {
     color: transparent;
     margin-bottom: -2.5%;
     -webkit-text-stroke: 1px rgb(0, 0, 0); 
-}
+}*/
 
-.supporting-copy {
-    color: #b0b0b0;
-    margin-bottom: -2.5%;
-}
-
-
-.hero-image {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 20%;
-}
-
-/* Estilos do rodapé */
 footer {
     background-color: #333;
     color: #fff;
