--- a/CSS/RecipePage.css
+++ b/CSS/RecipePage.css
@@ -14,3 +14,32 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     clip: rect(0, 0, 0, 0);
     border: 0;
 }
+
+.divider {
+    font-size: 3vh;
+    display: flex;
+    color: #b47c14;
+    font-family: 'Raleway', sans-serif;
+}
+
+.line {
+    align-items: center;
+}
+
+.double-razor {
+    &:before,
+    &:after {
+        height: 3px;
+        box-shadow:
+            0 -2px 0 #b47c14,
+            0 2px 0 #b47c14;
+        border: solid #b47c14;
+        border-width: 0;
+    }
+}
+
+.favorite-button i {
+    border: 1px solid #dc3545; /* Inicializa o ícone como contornado */
+    padding: 5px; /* Adiciona algum espaço para a borda ser visível */
+}
+
